# xaml-parser

./: .cpmf_uips_xaml.json.example  .gitignore  .gitmodules  .secrets.example  .xaml-parser.json.example  API-SURFACE-FIXES.md  CLAUDE.md  COMPLETE-STATUS.md  CONTRACT-FIXES-SUMMARY.md  CONTRIBUTING.md  DTO-MAPPING-FIXES.md  FIXES-SUMMARY.md  IMPLEMENTATION_DAY1.md  LICENSE  PLAN.md  README.md  REMAINING-GAPS-FIXED.md  RESOLUTION-COMPLETE.md  TESTING_STATUS.md  test_minimal.json  test_output.json  test_sample.xaml
.github/workflows/: ci.yml  hello.yml
developer-tests/: .gitignore  README.md  test_corpus_output.py
docs/: ADR-DTO-DESIGN.md  ADR-GRAPH-ARCHITECTURE.md  IMPLEMENTATION-PLAN-logging.md  IMPLEMENTATION-PLAN-test-coverage.md  INSTRUCTIONS-assembly-refs.md  INSTRUCTIONS-cli-py.md  INSTRUCTIONS-nesting.md  INSTRUCTIONS-packaging.md  MIGRATION.md  architecture.md
docs/adr/: adr-005-ownership-split.md
docs/archive/: EVALUATION.md  README.md  architecture.md  zweitmeinung.md
docs/plans/: PLAN_v0.2.1.md  PLAN_v0.2.10.md  PLAN_v0.2.11.md  PLAN_v0.2.12.md  PLAN_v0.2.2.md  PLAN_v0.2.3.md  PLAN_v0.2.4.md  PLAN_v0.2.5.md  PLAN_v0.2.6.md  PLAN_v0.2.7.md  PLAN_v0.2.8.md  (+1 more)
go/: README.md  go.mod
python/: .pre-commit-config.yaml  CHANGELOG.md  LICENSE-APACHE  LICENSE-CC-BY  PHASE_2A_COMPLETION.md  PHASE_2B_COMPLETION.md  PHASE_2_COMPLETE.md  PUBLISHING.md  PYPI_READY.md  README.md  TESTPYPI_SUCCESS.md  TWINE_SETUP.md  coverage.json  mypy.ini  mypy.ini.backup  pyproject.toml  pytest.ini  ruff.toml  test_package.py  test_results.txt
python/cpmf_uips_xaml/: __init__.py  __version__.py  logging_config.py  profiling.py
python/cpmf_uips_xaml/api/: __init__.py  analysis.py  config.py  emit.py  load.py  parsing.py  session.py  views.py
python/cpmf_uips_xaml/cli/: __main__.py  cli.py  reporters.py
python/cpmf_uips_xaml/config/: __init__.py  default_config.json  loader.py  models.py
python/cpmf_uips_xaml/shared/: progress.py
python/cpmf_uips_xaml/shared/model/: dto.py  field_profiles.py  models.py  validation.py
python/cpmf_uips_xaml/shared/utils/: __init__.py  annotations.py  data.py  debug.py  text.py  validation.py  xml.py
python/cpmf_uips_xaml/stages/analysis/: ancestry_graph.py  anti_patterns.py  flow_analysis.py  interprocedural_analysis.py  quality_metrics.py
python/cpmf_uips_xaml/stages/assemble/: analyzer.py  control_flow.py  graph.py  index.py  project.py
python/cpmf_uips_xaml/stages/emit/: pipeline.py  records.py  registry.py  utils.py  views.py
python/cpmf_uips_xaml/stages/emit/emitters/: __init__.py  ancestry_emitter.py  base.py  doc_emitter.py  json_emitter.py  mermaid_emitter.py
python/cpmf_uips_xaml/stages/emit/filters/: __init__.py  base.py  composite_filter.py  field_filter.py  none_filter.py
python/cpmf_uips_xaml/stages/emit/renderers/: __init__.py  base.py  doc_renderer.py  json_renderer.py  mermaid_renderer.py  record_renderer.py
python/cpmf_uips_xaml/stages/emit/sinks/: __init__.py  base.py  file_sink.py  stdout_sink.py
python/cpmf_uips_xaml/stages/normalize/: id_generation.py  normalizer.py  ordering.py  provenance.py
python/cpmf_uips_xaml/stages/parsing/: expression_parser.py  extractors.py  parser.py  type_system.py  visibility.py
python/cpmf_xaml_parser/: __init__.py  __version__.py  ancestry_graph.py  anti_patterns.py  cli.py  constants.py  dto.py  expression_parser.py  extractors.py  field_profiles.py  flow_analysis.py  interprocedural_analysis.py  logging_config.py  models.py  normalization.py  parser.py  profiling.py  progress.py  project.py  provenance.py  quality_metrics.py  type_system.py  utils.py  validation.py  visibility.py
python/cpmf_xaml_parser/emitters/: __init__.py  ancestry_emitter.py  doc_emitter.py  registry.py
python/cpmf_xaml_parser/templates/: workflow.md.j2
python/docs/: annotations.md
python/tests/: README.md  __init__.py  conftest.py  test_analyzer.py  test_control_flow.py  test_corpus.py  test_id_generation.py  test_mermaid_emitter.py  test_normalization.py  test_parser.py  test_parser_pytest.py  test_project.py  test_validation.py
python/tests/corpus/: conftest.py  test_expression_corpus.py  test_golden.py  test_smoke.py
python/tests/corpus/golden/: manifest.json
python/tests/integration/: conftest.py  test_annotation_integration.py  test_control_flow.py  test_doc_emitter.py  test_emitters.py  test_integration_views.py  test_load_integration.py  test_mermaid_emitter.py  test_parser.py  test_pipeline_integration.py  test_pipeline_simple.py  test_project.py  test_record_integration.py  test_record_smoke.py  test_schema_contract_compliance.py  test_schema_validation_example.py  test_session_record_emit.py
python/tests/unit/: conftest.py  test_analyzer.py  test_annotation_compatibility.py  test_annotation_parser.py  test_anti_patterns.py  test_cli.py  test_expression_parser.py  test_extractors.py  test_filters.py  test_graph.py  test_id_generation.py  test_load_api.py  test_logging.py  test_normalization.py  test_ordering.py  test_pipeline.py  test_profiling.py  test_quality_metrics.py  test_renderers.py  test_sinks.py  test_type_system.py  test_utils_activity.py  test_utils_data.py  test_utils_debug.py  test_utils_text.py  test_utils_validation.py  test_utils_xml.py  test_validation.py  test_views.py
python/xaml_parser/: __init__.py  __version__.py  analyzer.py  ancestry_graph.py  cli.py  constants.py  control_flow.py  dto.py  expression_parser.py  extractors.py  field_profiles.py  graph.py  id_generation.py  interprocedural_analysis.py  models.py  normalization.py  ordering.py  parser.py  project.py  utils.py  validation.py  views.py  visibility.py
python/xaml_parser/emitters/: __init__.py  ancestry_emitter.py  doc_emitter.py  json_emitter.py  mermaid_emitter.py  registry.py
python/xaml_parser/templates/: index.md.j2
schemas/: README.md  activity.schema.json  invocation.schema.json  variable.schema.json  workflow.schema.json  workflow_content.schema.json  xaml-activity-slice.schema.json  xaml-workflow-collection.schema.json  xaml-workflow-execution.schema.json
testdata/: README.md
(+48 files in other folders)
