[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xaml-parser"
version = "0.1.0"
authors = [
    {name = "Christian Prior-Mamulyan", email = "cprior@gmail.com"}
]
description = "Standalone XAML workflow parser for automation projects"
readme = "README.md"
license = {text = "CC-BY-4.0"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Office/Business :: Office Suites",
]
keywords = ["xaml", "workflow", "automation", "parsing", "rpa", "uipath"]

# Minimal dependencies for standalone package
dependencies = [
    "defusedxml>=0.7.1",  # Security for XML parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-defusedxml",
    "pre-commit>=3.5",
    "twine>=5.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/rpapub/xaml-parser"
Repository = "https://github.com/rpapub/xaml-parser"
Issues = "https://github.com/rpapub/xaml-parser/issues"

[project.scripts]
xaml-parser = "xaml_parser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["xaml_parser"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "D", "ANN"]
ignore = ["D203", "D212", "ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = "defusedxml.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=xaml_parser --cov-report=term-missing --cov-report=html --cov-fail-under=90"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "corpus: marks tests that use corpus data"
]

[tool.coverage.run]
source = ["xaml_parser"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]