[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cpmf-xaml-parser"
version = "0.2.0"
authors = [
    {name = "Christian Prior-Mamulyan", email = "cprior@gmail.com"}
]
description = "Standalone XAML workflow parser for automation projects (CPRIMA Forge)"
readme = "README.md"
license = {text = "Apache-2.0 AND CC-BY-4.0"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
]
keywords = ["xaml", "workflow", "automation", "parsing", "rpa", "uipath", "cprima-forge"]

# Minimal dependencies for standalone package
dependencies = [
    "defusedxml>=0.7.1",  # Security for XML parsing
]

[project.optional-dependencies]
# Optional features (undocumented "easter eggs")
extras = [
    "psutil>=5.9.0",      # Performance profiling with --performance flag
    "rich>=13.0.0",       # Progress bars with --progress flag
    "watchdog>=3.0.0",    # File system watching (future feature)
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-defusedxml",
    "pre-commit>=3.5",
    "twine>=5.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]
docs = [
    "jinja2>=3.1",
]
full = [
    "jinja2>=3.1",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
]

[dependency-groups]
dev = [
    "deepdiff>=8.6.1",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/rpapub/xaml-parser"
Repository = "https://github.com/rpapub/xaml-parser"
Issues = "https://github.com/rpapub/xaml-parser/issues"

[project.scripts]
cpmf-xaml-parser = "cpmf_xaml_parser.cli:main"

[project.entry-points."cpmfxamlparser.emitters"]
json = "cpmf_xaml_parser.emitters.json_emitter:JsonEmitter"
mermaid = "cpmf_xaml_parser.emitters.mermaid_emitter:MermaidEmitter"
doc = "cpmf_xaml_parser.emitters.doc_emitter:DocEmitter"

[tool.hatch.build.targets.wheel]
packages = ["cpmf_xaml_parser"]

[tool.hatch.build.targets.wheel.force-include]
"cpmf_xaml_parser/py.typed" = "cpmf_xaml_parser/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "cpmf_xaml_parser/**/*.py",
    "cpmf_xaml_parser/py.typed",
    "cpmf_xaml_parser/templates/**/*",
    "tests/**/*.py",
    "LICENSE-APACHE",
    "LICENSE-CC-BY",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "D", "ANN"]
ignore = ["D203", "D212", "ANN101", "ANN102", "ANN401", "E501", "B019"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Use black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = "defusedxml.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Deterministic test execution
addopts = [
    "--verbose",
    "--cov=cpmf_xaml_parser",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
    "--strict-markers",
    "--tb=short",
    "-p", "no:randomly",  # Disable random test ordering
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "corpus: marks tests that use corpus data"
]
# Ensure deterministic behavior
env = [
    "PYTHONHASHSEED=0",  # Fixed hash seed for determinism
]

[tool.coverage.run]
source = ["cpmf_xaml_parser"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
